<resources>
    <string name="app_name">WalletWise</string>
    <string name="skip">Skip</string>
    <string name="greet_name">Hello, %1$s</string>
    <string name="title_page_1">Fast transfer</string>
    <string name="desc_page_1">Send the money from your internet bank that you want to switch to the eKambia account</string>
    <string name="title_page_2">Save on every transaction</string>
    <string name="desc_page_2">Send the money from your internet bank that you want to switch to the eKambia account</string>
    <string name="title_page_3">Change money Quick and Easy</string>
    <string name="desc_page_3">Send the money from your internet bank that you want to switch to the eKambia account</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="icon_option_description">Icon option</string>
    <string name="back">Back</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="tab_this_month">This Month</string>
    <string name="tab_this_year">This Year</string>
    <string name="tab_custom">Custom</string>
    <string name="total_balance">Total Balance</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="income_vs_expense">Income vs Expense</string>
    <string name="balance_trend">Balance Trend</string>
    <string name="balance_trend_subtitle">Do I have more money than before?</string>
    <string name="today_label">TODAY</string>
    <string name="vs_past_period">vs past period</string>
    <string name="cash_flow">Cash Flow</string>
    <string name="cash_flow_subtitle">Am I spending less than I make?</string>
    <string name="last_30_days">LAST 30 DAYS</string>
    <string name="balance_by_accounts">Balance by Accounts</string>
    <string name="balance_by_accounts_subtitle">In which accounts do I have most of my money?</string>
    <string name="top_spending_categories">Top Spending Categories</string>
    <string name="top_spending_categories_subtitle">How does this compare to last period?</string>
    <string name="no_category_trend_data">Not enough data yet to compare periods.</string>
    <string name="biggest_transactions">Biggest Transactions</string>
    <string name="biggest_transactions_subtitle">Your largest income &amp; expenses this period</string>
    <string name="no_biggest_transactions">No transactions in this period yet.</string>
</resources>